<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/tv_Clicks"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_main">

    <TextView
        android:id="@+id/Clicks"
        android:layout_width="130dp"
        android:layout_height="39dp"
        android:text="@string/clicks"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.58000004" />

    <Button
        android:id="@+id/b_clicks"
        android:layout_width="208dp"
        android:layout_height="142dp"
        android:text="@string/button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.75" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="206dp"
        android:layout_height="58dp"
        android:layout_marginStart="102dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="103dp"
        android:layout_marginBottom="174dp"
        android:text="@string/Header"
        app:layout_constraintBottom_toTopOf="@+id/Clicks"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/Upgrade1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Upgrade1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/Upgrade2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.44" />

    <Button
        android:id="@+id/Upgrade2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Upgrade2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/Upgrade1"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.44" />

    <TextView
        android:id="@+id/Upgrade1Cost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Upgrade1Cost"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/Upgrade2Cost"
        app:layout_constraintHorizontal_bias="0.13"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.38" />

    <TextView
        android:id="@+id/Upgrade2Cost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Upgrade2Cost"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/Upgrade1Cost"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.38" />

</androidx.constraintlayout.widget.ConstraintLayout>